--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,17 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: docker login
+        env:
+            DOCKER_USER: ${{ secrets.DOCKER_USER }}   
+            DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }} 
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      
+      - name: docker build
+        run: |
+          docker build ./app -t gaurav04/flask
+        
+      - name: docker push
+        run: |
+          docker push gaurav04/flask
