--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -15,27 +12,21 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: docker login
-        env:
-            DOCKER_USER: ${{ secrets.DOCKER_USER }}   
-            DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }} 
-        run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       
-      - name: docker build
-        run: |
-          docker build ./app -t gaurav04/flask
-        
-      - name: docker push
-        run: |
-          docker push gaurav04/flask
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./app
+          pull: true
+          push: true
+          tags: gaurav04/flask:${{ github.sha}}
