--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./app
+          push: true
           tags: gaurav04/flask:${{ github.sha}}
