--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: ./app
-          push: true
-          tags: gaurav04/flask:${{ github.sha}}
+      - name: docker build
+        run: |
+          docker build ./app -t gaurav04/flask:${{ github.sha }}
+                  
+      - name: docker push
+        run: |
+          docker push gaurav04/flask:${{ github.sha }}
