--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,11 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
+    if: github.event_name == 'push' && github.ref  == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -24,8 +26,5 @@ jobs:
       
       - name: docker build
         run: |
-          docker build ./app -t gaurav04/flask:${{ github.sha }}
-                  
-      - name: docker push
-        run: |
-          docker push gaurav04/flask:${{ github.sha }}
+          docker build ./app -t gaurav04/flask
+          docker push gaurav04/flask
