--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: docker run
         run: |
-          docker run -d 5050:5050 gaurav04/flask:${{ github.sha }}
+          docker run -d -p 5000:5000 gaurav04/flask:${{ github.sha }}
           sleep 5
           curl localhost:5050
     
