--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Output Run ID
+        run: echo ${{ github.run_id }}
+        
+      - name: Output Run Number
+        run: echo ${{ github.run_number }
       
       - name: docker build
         run: |
