--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: echo ${{ github.run_id }}
         
       - name: Output Run Number
-        run: echo ${{ github.run_number }
+        run: echo ${{ github.run_number }}
       
       - name: docker build
         run: |
